--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The gamerX</title>
-
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" media="screen and (max-width: 600px)" href="style-tab.css">
     <link rel="stylesheet" media="screen and (max-width: 320px)" href="style-mob.css">
 </head>
