--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
     <div class="text">
         
         <img src="hero.jpg" class="img">
-        <container style="float: right;"> 
+        <container style="float: right; width: 60%; 
+        height: 100%; 
+        padding: 5%;"> 
            <p>
                 <span><b>GOD OF WAR</b></span>
                 <br><br>
