--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <label>Email:</label>
                 <br><br>
 
-                <input type="email">
+                <input type="email" style="width: 100%;">
                 <br><br>
                 <label>Message:</label>
                 <br><br>
