--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" media="screen and (max-width: 320px)" href="style-mob.css">
 </head>
 <body style="background-color:black">
-    <div style = "background-image:url(hero.jpg); background-size: cover; background-repeat: no-repeat; background-position:center; width: 100%; height: 100%; display:flexbox;">
+    <div style = "background-image:url(https://1.bp.blogspot.com/-AO6miEm7H_s/X5kBHCeh7NI/AAAAAAAAB3s/1NRldLy57rcT5vuAE7swIeLdvdVHJfdZgCLcBGAsYHQ/s1920/VALORANT4k.jpg); background-size: cover; background-repeat: no-repeat; background-position:center; width: 100%; height: 100%; display:flexbox;">
         <div>
             <button >Signup</button> 
             <button style="background-color: rgb(218, 0, 0);">Login</button>
@@ -42,7 +42,7 @@
     <p id="games" style="text-align:center; font-size:2em;">GAMES<hr></p>
     <div class="text">
         
-        <img src="https://scontent.fjsr8-1.fna.fbcdn.net/v/t1.6435-9/s960x960/174022802_4451332068224415_4815896078753358181_n.jpg?_nc_cat=107&ccb=1-3&_nc_sid=e3f864&_nc_ohc=NoI0Hex7YxUAX_Mpqpy&_nc_ht=scontent.fjsr8-1.fna&tp=7&oh=89c921064675f13ed12bc40faf3425cb&oe=60E3C094" class="img">
+        <img src="https://cdn.gamer-network.net/2020/usgamer/AC-Valhalla-Header-08.jpg/EG11/thumbnail/1920x1080/format/jpg/quality/65/assassins-creed-valhalla-will-hit-30-fps-minimum-on-xbox-series-x-ubisoft-says.jpg" class="img">
         <container style="float: right;" class="container"> 
            <p>
                 <span><b>GOD OF WAR</b></span>
